examples/pos/string_concat_pr493.effekt
module examples/pos/string_concat

def main() = {
  val s1 = "hello"
  val s2 = " world"
  println((s1 ++ s2).length)
}
