examples/neg/multiple_main.effekt
namespace nested { // ERROR Multiple main functions
  def main() = println("hello")
}

def main() = println("world")